# British-Airways-Customer-Feedback-Reviews

./: README.md  ba_reviews.json  customer_booking_prediction.ipynb  hello.py  lda_visualization.html  presentation_slide_bristish_airways.pptx  pyproject.toml  review_scrapper.py  task_2_ml_ifeanyi_emeagi.pptx  topic_modelling.py  ~$task_2_ml_ifeanyi_emeagi.pptx
