[project]
name = "british-airways-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "gensim>=4.3.3",
    "graphviz>=0.20.3",
    "imbalanced-learn>=0.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyldavis>=3.4.1",
    "scikit-learn>=1.6.1",
    "scrapy>=2.12.0",
]
